# ParallelComputing_part6

./: CMakeLists.txt  README.md
src/: main.cpp
